--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["uv_build>=0.9.22,<0.10.0"]
 build-backend = "uv_build"
 
 [project]
-name = "project_name"
+name = "rice_cnn_classifier"
 version = "0.0.1"
-description = "A short description of the project."
+description = "Classification of rice varieties using CNN."
 authors = [
-  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
+  { name = "Group 1", email = "your@email.com" },
 ]
 
 keywords = ["machine learning", "MLOps"]
