--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dvc-gs>=3.0.2",
     "fastapi==0.115.6",
     "torch==2.6.0",
     "typer==0.15.1",
