--- a/config_cpu.yaml
+++ b/config_cpu.yaml
@@ -6,6 +6,6 @@ workerPoolSpecs:
       imageUri: europe-west1-docker.pkg.dev/river-portfolio-484113-c9/rice-repo/rice-model:v1
       env:
         - name: WANDB_API_KEY
-          value: <INSERT_YOUR_WANDB_KEY_HERE>
+          value: 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
       command: ["python", "src/rice_cnn_classifier/train.py"]
       args: ["--epochs=10", "--batch-size=32", "--data-path=/gcs/rice-project-data-karen/data/processed", "--model-dir=/gcs/rice-project-data-karen/models"]
