--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,16 +24,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install -U pip setuptools wheel
-          pip install -r requirements.txt
-          pip list
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
+      - name: Install dependencies with uv
+        run: uv sync --frozen --group dev
 
       - name: Run tests & coverage
         run: |
-          coverage run -m pytest tests/
-          coverage report -m
+          uv run coverage run -m pytest tests/
+          uv run coverage report -m
