--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -17,23 +17,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
       - name: Install dependencies
-        run: |
-          python -m pip install -U pip setuptools wheel
-          pip install -r requirements.txt
-          pip install -r requirements_dev.txt
-          pip list
+        run: uv sync --frozen --group dev
 
       - name: ruff check
         run: |
-          ruff check .
+          uv run ruff check .
 
       - name: ruff format
         run: |
-          ruff format .
+          uv run ruff format .
