--- a/.github/workflows/pre-commit-update.yaml
+++ b/.github/workflows/pre-commit-update.yaml
@@ -17,20 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
-          cache: 'pip'
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
 
       - name: Install pre-commit
-        run: pip install pre-commit
+        run: uv tool install pre-commit
 
       - name: Run pre-commit autoupdate
-        run: pre-commit autoupdate
+        run: uv tool run pre-commit autoupdate
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
