--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -47,14 +47,22 @@ jobs:
           docker push "${IMAGE_URI}:latest"
 
       - name: Submit Vertex AI training job
+        shell: bash
         env:
           IMAGE_URI: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REPO }}/${{ env.IMAGE_NAME }}
           JOB_NAME: rice-train-${{ github.run_id }}
           DATA_PATH: data/processed
           MODEL_DIR: models
         run: |
+          set -euo pipefail
+
           TRAIN_CMD="dvc pull -r remote_storage ${DATA_PATH} && uv run src/rice_cnn_classifier/train.py --data_path=${DATA_PATH} --model_dir=${MODEL_DIR}"
+
           gcloud ai custom-jobs create \
-            --region=${{ env.REGION }} \
-            --display-name=${JOB_NAME} \
-            --worker-pool-spec=replica-count=1,machine-type=n1-standard-8,accelerator-type=nvidia-tesla-t4,accelerator-count=1,container-image-uri=${IMAGE_URI}:${{ github.sha }},command=bash,args=-lc,args="${TRAIN_CMD}"
+            --region="${REGION}" \
+            --display-name="${JOB_NAME}" \
+            --worker-pool-spec="replica-count=1,machine-type=n1-standard-8,accelerator-type=nvidia-tesla-t4,accelerator-count=1,container-image-uri=${IMAGE_URI}:${GITHUB_SHA}" \
+            --command="bash" \
+            --args="-lc" \
+            --args="${TRAIN_CMD}"
+
