--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,6 @@
 [core]
     remote = remote_storage
+    autostage = true
 ['remote "remote_storage"']
     url = gs://helsoe_mlops_data_bucket/Images
     version_aware = true
