--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -56,7 +56,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          TRAIN_CMD="uv run src/rice_cnn_classifier/train.py --data-path=gs://helsoe_mlops_data_bucket/data/processed --model-dir=gs://helsoe_mlops_data_bucket/models"
+          TRAIN_CMD="uv run src/rice_cnn_classifier/train.py --data-path=/gcs/helsoe_mlops_data_bucket/data/processed --model-dir=/gcs/helsoe_mlops_data_bucket/models"
 
           gcloud ai custom-jobs create \
             --region="${REGION}" \
