Add uv packages, format code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pillow>=10.0.0",
     "torchvision>=0.17.0",
     "numpy>=1.26.0",
+    "wandb>=0.24.0",
 ]
 
 [dependency-groups]
