Add evaluation run after training

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -55,7 +55,8 @@ jobs:
         run: |
           set -euo pipefail
 
-          TRAIN_CMD="uv run src/rice_cnn_classifier/train.py --data-path=/gcs/rice_image_dataset/data/processed --model-dir=/gcs/rice_image_dataset/models"
+          TRAIN_CMD="uv run python -m rice_cnn_classifier.train --data-path=/gcs/rice_image_dataset/data/processed --model-dir=/gcs/rice_image_dataset/models"
+          EVAL_CMD="uv run python -m rice_cnn_classifier.evaluate --model-path=/gcs/rice_image_dataset/models/model.pth --data-path=/gcs/rice_image_dataset/data/processed"
 
           gcloud ai custom-jobs create \
             --region="${REGION}" \
@@ -63,6 +64,6 @@ jobs:
             --worker-pool-spec="replica-count=1,machine-type=n1-standard-8,accelerator-type=NVIDIA_TESLA_T4,accelerator-count=1,container-image-uri=${IMAGE_URI}:${GITHUB_SHA}" \
             --command="sh" \
             --args="-lc" \
-            --args="export WANDB_API_KEY=${WANDB_API_KEY} && ${TRAIN_CMD}"
+            --args="export WANDB_API_KEY=${WANDB_API_KEY} && ${TRAIN_CMD} && ${EVAL_CMD}"
 
 
