--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "scikit-learn>=1.4.0",
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
+    "pydantic>=2.12.5",
 ]
 
 [dependency-groups]
