own container -> vertex job

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "dvc-gs>=3.0.2",
     "dvc[gs]>=3.0.0",
     "fastapi==0.115.6",
+    "google-cloud-aiplatform>=1.73.0",
     "invoke>=2.2.0",
     "pathspec>=0.11.0,<0.12.0",
     "torch==2.6.0",
