--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
     "pydantic>=2.12.5",
+    "gradio>=6.3.0",
 ]
 
 [dependency-groups]
