--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,4 +69,5 @@ explicit = true
 line-length = 120
 
 [tool.coverage.run]
-omit = ["tests/*"]
+omit = ["tests/*", "*/_remote_module_non_scriptable.py"]
+ignore_errors = true
