Move files, fix comments

--- a/.github/workflows/pre-commit-update.yaml
+++ b/.github/workflows/pre-commit-update.yaml
@@ -1,11 +1,9 @@
-# pre-commit auto-update workflow
-# Dependabot does not support updating pre-commit so this workflow will do that
 name: Pre-commit auto-update
 
 on:
   schedule:
     - cron: '0 0 * * *'
-  workflow_dispatch: {}  # Allows manual executions
+  workflow_dispatch: {}
 
 permissions:
   contents: write
